[package]
name = "sysgenid-dbus"
version = "0.1.0"
authors = ["Adrian Catangiu <acatan@amazon.com>"]
edition = "2018"

[dependencies]
dbus = ">=0.9.2"
dbus-crossroads = "0.3.0"
log = "0.4"

# Used by examples
dbus-tokio = "0.7.3"
tokio = {version = "1.0", features=["macros", "time", "net", "io-util", "rt-multi-thread"]}
uuid = { version = "0.8", features = ["v4"] }
